--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,13 +35,28 @@ body {
 }
 
 @layer components {
-  .btn-blue {
-    @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+  .btn-darkblue {
+    @apply flex justify-center bg-darkblue text-white transition-all-500 hover:hover-color fill-white  px-4 py-3 w-full btn-border shadow-lg;
+  }
+  .btn-text {
+    @apply block text-3xl text-wrap my-auto mx-2 font-medium text-center align-middle justify-center;
+  }
+  .icon {
+    @apply p-2 max-w-12 max-h-12 transition-all-500;
   }
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+  .transition-all-500 {
+    @apply transition-all duration-500;
+  }
+  .btn-border {
+    @apply border-0 rounded-xl;
+  }
+  .hover-color {
+    @apply bg-white fill-darkblue text-darkblue;
   }
 }
