added card components for all features, and styling, and mobile responsiveness

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,10 @@ body {
       @apply text-sm;
     }
     .content-text {
-      @apply text-mdd;
+      @apply text-md;
+    }
+    .grid-2-cols-4-rows {
+      @apply gap-x-1;
     }
   }
   @screen xs {
@@ -48,12 +51,23 @@ body {
       @apply text-mdd;
     }
   }
-  @screen sm {
+  @screen xsm {
     .title-text {
-      @apply text-mdd;
+      @apply text-md;
     }
     .content-text {
-      @apply text-xl;
+      @apply text-2mdd;
+    }
+    .grid-2-cols-4-rows {
+      @apply gap-x-4;
+    }
+  }
+  @screen sm {
+    .title-text {
+      @apply text-md;
+    }
+    .content-text {
+      @apply text-base;
     }
   }
   @screen md {
@@ -61,7 +75,7 @@ body {
       @apply text-2mdd;
     }
     .content-text {
-      @apply text-3xl;
+      @apply text-xl;
     }
   }
 }
@@ -70,18 +84,23 @@ body {
   .btn-darkblue {
     @apply flex justify-center bg-darkblue text-white transition-all-500 hover:hover-color fill-white  px-4 py-3 w-full btn-border shadow-lg;
   }
-
   .icon {
     @apply px-2 my-auto max-w-12 max-h-12;
   }
+  .card {
+    @apply max-w-lg card-width p-1 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-2xl;
+  }
   .id-card {
-    @apply max-w-lg card-width mb-6 sm:p-8 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-2xl bg-gradient-to-r from-lightblue to-lightpink transition-all-500;
+    @apply card px-6 pt-6 bg-gradient-to-r from-lightblue to-lightpink transition-all-500;
   }
   .feature-card {
-    @apply max-w-lg card-width p-8 rounded-xl shadow-md overflow-hidden md:max-w-2xl bg-darkblue  text-white transition-all-500;
+    @apply card flex flex-row mt-4 mb-0 mx-auto bg-darkblue  text-white hover:bump transition-all duration-300 bg-gradient-to-r from-paleblue to-deepblue;
   }
   .profile-image {
-    @apply w-1/3 h-auto;
+    @apply w-3/12 h-auto;
+  }
+  .grid-2-cols-4-rows {
+    @apply grid grid-cols-2 grid-rows-4 gap-y-2 ml-10 my-auto py-2;
   }
 }
 
@@ -99,10 +118,13 @@ body {
     @apply bg-white fill-darkblue text-darkblue;
   }
   .header-text {
-    @apply block text-3xl text-nowrap overflow-ellipsis font-bold align-middle text-left;
+    @apply mx-auto text-3xl text-nowrap overflow-ellipsis font-bold align-middle text-left;
+  }
+  .h2-text {
+    @apply block md:text-3xl font-medium sm:text-xl text-nowrap;
   }
   .btn-text {
-    @apply block md:text-3xl sm:text-xl text-nowrap my-auto mx-2 font-medium text-center align-middle justify-center;
+    @apply h2-text my-auto mx-2  text-center align-middle justify-center;
   }
   .title-text {
     @apply uppercase tracking-normal overflow-ellipsis text-darkblue font-semibold;
@@ -113,10 +135,7 @@ body {
   .card-width {
     @apply w-full;
   }
-}
-/* .open-card {
-    @apply  visible;
+  .bump {
+    @apply shadow-sm shadow-default duration-500 border-darkblue border-4;
   }
-  .hide-card {
-    @apply  hidden;
-  } */
+}
