--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,7 +21,7 @@ body {
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
-    )
+    ),
     rgb(var(--background-start-rgb));
 }
 
@@ -81,8 +81,6 @@ body {
 }
 
 @layer components {
-  .btn {
-    @apply flex justify-center  px-4 py-3 w-full btn-border shadow-lg;
   }
   .btn-darkblue {
     @apply btn bg-darkblue text-white transition-all-500 hover:hover-color fill-white;
@@ -117,8 +115,6 @@ body {
 .embla__slide {
   flex: 0 0 100%;
   min-width: 0;
-}
-
 }
 
 @layer utilities {
@@ -159,3 +155,8 @@ body {
     @apply;
   }
 }
+
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
