--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -81,6 +81,8 @@ body {
 }
 
 @layer components {
+  .btn {
+    @apply flex justify-center px-4 py-3 w-full btn-border shadow-lg;
   }
   .btn-darkblue {
     @apply btn bg-darkblue text-white transition-all-500 hover:hover-color fill-white;
@@ -115,6 +117,7 @@ body {
 .embla__slide {
   flex: 0 0 100%;
   min-width: 0;
+}
 }
 
 @layer utilities {
