--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -40,7 +40,7 @@ body {
       @apply text-md;
     }
     .grid-2-cols-4-rows {
-      @apply gap-x-1;
+      @apply gap-x-2;
     }
   }
   @screen xs {
@@ -72,10 +72,10 @@ body {
   }
   @screen md {
     .title-text {
-      @apply text-2mdd;
+      @apply text-md;
     }
     .content-text {
-      @apply text-xl;
+      @apply text-2mdd;
     }
   }
 }
@@ -100,7 +100,7 @@ body {
     @apply max-w-lg card-width p-1 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-2xl;
   }
   .id-card {
-    @apply card px-6 pt-6 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
+    @apply card px-4 pt-6 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
   }
   .feature-card {
     @apply card flex flex-row mb-4 mx-auto bg-darkblue text-white hover:bump transition-all duration-300;
@@ -109,7 +109,7 @@ body {
     @apply w-fit text-2xl font-semibold text-darkblue;
   }
   .grid-2-cols-4-rows {
-    @apply grid grid-cols-2 grid-rows-4 gap-y-2 ml-10 my-auto py-2;
+    @apply grid grid-cols-2 grid-rows-4 gap-y-2 ml-10 my-auto gap-x-6 py-2;
   }
   .embla {
   @apply overflow-hidden;
@@ -146,7 +146,7 @@ body {
     @apply h2-text my-auto mx-2  text-center align-middle justify-center;
   }
   .title-text {
-    @apply uppercase tracking-normal overflow-ellipsis text-darkblue font-semibold;
+    @apply uppercase tracking-normal overflow-ellipsis text-lightgray font-semibold;
   }
   .content-text {
     @apply block leading-tight font-medium text-default;
