--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -69,6 +69,7 @@ body {
     .content-text {
       @apply text-base;
     }
+    
   }
   @screen md {
     .title-text {
@@ -100,7 +101,7 @@ body {
     @apply max-w-lg card-width p-1 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-2xl;
   }
   .id-card {
-    @apply card px-4 pt-6 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
+    @apply p-2 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden px-6 pt-4 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
   }
   .feature-card {
     @apply card flex flex-row mb-4 mx-auto bg-darkblue text-white hover:bump transition-all duration-300;
@@ -109,7 +110,7 @@ body {
     @apply w-fit text-2xl font-semibold text-darkblue;
   }
   .grid-2-cols-4-rows {
-    @apply grid grid-cols-2 grid-rows-4 gap-y-2 ml-10 my-auto gap-x-6 py-2;
+    @apply grid grid-cols-2 grid-rows-4 gap-y-2 ml-5 my-auto gap-x-6 md:py-2;
   }
   .embla {
   @apply overflow-hidden;
@@ -149,7 +150,7 @@ body {
     @apply uppercase tracking-normal overflow-ellipsis text-lightgray font-semibold;
   }
   .content-text {
-    @apply block leading-tight font-medium text-default;
+    @apply block leading-tight font-medium;
   }
   .card-width {
     @apply w-full;
