--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -64,7 +64,7 @@ body {
   }
   @screen sm {
     .title-text {
-      @apply text-md;
+      @apply text-2mdd;
     }
     .content-text {
       @apply text-base;
@@ -77,6 +77,14 @@ body {
     }
     .content-text {
       @apply text-2mdd;
+    }
+  }
+  @screen lg {
+    .title-text {
+      @apply text-[1rem];
+    }
+    .content-text {
+      @apply text-[1.3rem];
     }
   }
 }
@@ -98,7 +106,7 @@ body {
     @apply px-2 my-auto max-w-12 max-h-12;
   }
   .card {
-    @apply max-w-lg card-width p-1 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-2xl;
+    @apply max-w-lg card-width p-1 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-3xl;
   }
   .id-card {
     @apply p-2 sm:p-2 lg:w-[30vw] xl:w-[11/12] w-11/12 mx-auto xxs:p-3 rounded-xl shadow-md overflow-hidden px-6 pt-4 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
@@ -110,7 +118,7 @@ body {
     @apply w-fit text-2xl font-semibold text-darkblue;
   }
   .grid-2-cols-4-rows {
-    @apply grid grid-cols-2 grid-rows-3 gap-y-2 my-auto gap-x-2 lg:gap-x-1 md:py-2 ;
+    @apply grid grid-cols-2 grid-rows-3 gap-y-2 my-auto gap-x-6 md:gap-x-10 lg:gap-x-16 md:py-2 ;
   }
   .embla {
   @apply overflow-hidden;
