--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -39,9 +39,6 @@ body {
     .content-text {
       @apply text-md;
     }
-    .grid-2-cols-4-rows {
-      @apply gap-x-2;
-    }
   }
   @screen xs {
     .title-text {
@@ -57,9 +54,6 @@ body {
     }
     .content-text {
       @apply text-2mdd;
-    }
-    .grid-2-cols-4-rows {
-      @apply gap-x-4;
     }
   }
   @screen sm {
@@ -81,10 +75,10 @@ body {
   }
   @screen lg {
     .title-text {
-      @apply text-[1rem];
+      @apply text-[0.6rem];
     }
     .content-text {
-      @apply text-[1.3rem];
+      @apply text-[0.8rem];
     }
   }
 }
@@ -106,10 +100,10 @@ body {
     @apply px-2 my-auto max-w-12 max-h-12;
   }
   .card {
-    @apply max-w-lg card-width p-1 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-3xl;
+    @apply card-width p-1 sm:p-3 xxs:p-3 rounded-xl shadow-md overflow-hidden md:max-w-3xl;
   }
   .id-card {
-    @apply p-2 sm:p-2 lg:w-[30vw] xl:w-[11/12] w-11/12 mx-auto xxs:p-3 rounded-xl shadow-md overflow-hidden px-6 pt-4 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
+    @apply p-2 sm:p-2 xxs:p-3 rounded-xl shadow-md overflow-hidden px-6 pt-4 bg-gradient-to-r from-[#BEE3F7] to-white transition-all-500;
   }
   .feature-card {
     @apply card flex flex-row mb-4 mx-auto bg-darkblue text-white hover:bump transition-all duration-300;
@@ -118,7 +112,7 @@ body {
     @apply w-fit text-2xl font-semibold text-darkblue;
   }
   .grid-2-cols-4-rows {
-    @apply grid grid-cols-2 grid-rows-3 gap-y-2 my-auto gap-x-6 md:gap-x-10 lg:gap-x-16 md:py-2 ;
+    @apply grid grid-cols-2 grid-rows-3 md:gap-y-2 my-auto gap-x-6 md:gap-x-10 lg:gap-x-16 md:py-2;
   }
   .embla {
   @apply overflow-hidden;
